--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -3,5 +3,6 @@
     position: fixed;
     width: 100%;
     z-index: 2;
-    color:aliceblue;
+    font-family: 'Montserrat', sans-serif;
+    color: aliceblue;
 }
