--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -1,8 +1,24 @@
-.btn-land{
-position: absolute;
-}
 
-.background-images{
-    background-image: url("https://res.cloudinary.com/dxsvkn4eo/image/upload/v1677499400/bg002_rw3qet.jpg");
-height: 100vh;
-}
+
+#background-images{
+    /* filter: opacity(90%); */
+    background-image: 
+    linear-gradient(
+          rgba(237, 9, 195, 0.712),  rgba(104, 5, 131, 0.893)
+    ),url("https://res.cloudinary.com/dxsvkn4eo/image/upload/v1677499400/bg002_rw3qet.jpg");
+    filter: opacity(90%);
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;  
+    width: 100%;
+ }
+ #card-cotiz{
+    color: white;
+ }
+
+ #container-beneficios{
+    background-color: rgb(250, 250, 244);
+
+ }
+ 
