--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -22,3 +22,27 @@
 
  }
  
+#btn-wsp{
+position: fixed;
+  width: 48px;
+  height: 48px;
+  /* line-height: 55px; */
+  bottom: 50px;
+  right: 23px;
+  /* padding: -20px; */
+  background: #0df053;
+  color: #fff;
+  border: transparent;
+  border-radius: 50%;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.445);
+  z-index: 100;
+  cursor: pointer;
+}
+  #btn-wsp:hover {
+    text-decoration: none;
+    color: #0df053;
+    background: #f7eeee;
+};
