--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,5 +1,5 @@
 #nav{
-    background-color: rgba(137, 43, 226, 0.308) ;
+    background-color: transaparent ;
     position: sticky;
     width: 100%;
     height: fit-content;
