--- a/src/components/Landing/CarouselLanding.css
+++ b/src/components/Landing/CarouselLanding.css
@@ -1,24 +1,51 @@
-.bg-img-1{
-    background-image: url("https://res.cloudinary.com/dxsvkn4eo/image/upload/v1677499400/bg002_rw3qet.jpg");
+/* .bg-img-1{
+    background-image: linear-gradient(
+        rgba(250, 21, 208, 0.315),  rgba(91, 0, 116, 0.986)
+  ), url("https://res.cloudinary.com/dxsvkn4eo/image/upload/v1677499400/bg002_rw3qet.jpg");
 
 }
 .bg-img-2{
-    background-image: url("https://res.cloudinary.com/dxsvkn4eo/image/upload/v1677499400/bg001_u2kmyd.jpg");
+    background-image: linear-gradient(
+        rgba(250, 21, 208, 0.315),  rgba(91, 0, 116, 0.986)
+  ),url("https://res.cloudinary.com/dxsvkn4eo/image/upload/v1677499400/bg001_u2kmyd.jpg");
     
 }
 .bg-img-3{
-    background-image: url("https://res.cloudinary.com/dxsvkn4eo/image/upload/v1677499400/bg004_rkzo0w.jpg");
+    background-image: linear-gradient(
+        rgba(250, 21, 208, 0.315),  rgba(91, 0, 116, 0.986)
+  ),url("https://res.cloudinary.com/dxsvkn4eo/image/upload/v1677499400/bg004_rkzo0w.jpg");
    
-}
+} */
 
-.carousel-image{
-    position:relative;
-    z-index: 1;
-    height: 100vh;
+#container{
+    z-index: -100;
+    height: 100%;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;  
+    width: 100%;
+     background: linear-gradient(
+        rgba(230, 4, 188, 0.89),  rgba(113, 5, 143, 0.945)
+  );
+  filter: opacity(60%);
+}
+/* #container img{
+    
+  
+} */
+#carouselExampleCaptions{
+    position: sticky;
+    
+}
+.carousel-image {
+    height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;    
 }
+
+
 
 .btn-siguiente{
     position: absolute;
