--- a/src/components/Landing/Beneficios.css
+++ b/src/components/Landing/Beneficios.css
@@ -2,7 +2,7 @@
     font-family: 'Montserrat', sans-serif;
      background-image: 
     linear-gradient(
-          rgba(237, 9, 195, 0.712),  rgba(104, 5, 131, 0.893)
+          rgba(237, 9, 195, 0.788),  rgb(104, 5, 131)
     )
 
 }
