--- a/src/components/Landing/CarouselLanding.css
+++ b/src/components/Landing/CarouselLanding.css
@@ -26,9 +26,9 @@
     background-position: center;  
     width: 100%;
      background: linear-gradient(
-        rgba(230, 4, 188, 0.89),  rgba(113, 5, 143, 0.945)
+        rgb(230, 4, 189),  rgb(113, 5, 143)
   );
-  filter: opacity(60%);
+  filter: opacity(90%);
 }
 /* #container img{
     
